--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<p>Look at my resume.</p>
 			</div>
 			<div id="item4" class="content">
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
+				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
 				<p>Look at pictures of my cat Rockstar.</p>
 			</div>
