mobile version hopefully

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!--if you need to look up a reference: explore https://www.w3schools.com/html/default.asp -->
 <head>
 	<title>Sarah Skinner</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 	<link rel="icon" href="MeLogo3-purple-circle2.png">
 	<style type=text/css>
 	
