--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 			background-position: center center;
 			background-attachment: fixed;
 			text-shadow: 1px 1px black;
+			font-family: "Times New Roman", Times, serif;
+		}
+		h1{
+			font-family: "Times New Roman", Times, serif;
+		}
+		h3{
+			font-family: "Times New Roman", Times, serif;
 		}
 		p{
 			margin:30px;
@@ -81,7 +88,7 @@
 		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
 			<img src="MeLogo3.png" alt="Xinu" class="melogo">
 			<h1>Sarah Skinner</h1>
-			<h3>This is what I'm doing right now.</h2>
+			<h3>That's me. This is what I'm doing right now.</h2>
 			<!--these are links. You can set the destination to other sites or other parts of your page. If you want to 
 				go to a different part of the page, then you have to give that part an id such as "item1"-->
 			<!-- <a href="https://isitchristmas.com/">Is it Christmas?</a> -->
