--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		h1{
 			font-family: "Times New Roman", Times, serif;
 		}
+		h2{
+			font-family: "Times New Roman", Times, serif;
+		}
 		h3{
 			font-family: "Times New Roman", Times, serif;
 		}
