--- a/index.html
+++ b/index.html
@@ -3,82 +3,10 @@
 <head>
 	<title>Sarah Skinner</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/my_styles.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 	<link rel="icon" href="MeLogo3-purple-circle2.png">
-	<style type=text/css>
-	
-		body{
-			background-color: grey;
-			text-align: center;
-			color: white;
-			background-image: url('bg12.jpg');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: center center;
-			background-attachment: fixed;
-			text-shadow: 1px 1px black;
-			font-family: "Times New Roman", Times, serif;
-		}
-		h1{
-			font-family: "Times New Roman", Times, serif;
-		}
-		h2{
-			font-family: "Times New Roman", Times, serif;
-		}
-		h3{
-			font-family: "Times New Roman", Times, serif;
-		}
-		p{
-			margin:30px;
-			margin-top:0px;
-		}
-		div.allthings{
-			display: flex;
-			align-items: center;
-			flex-direction: column;
-			justify-content: center;
-		}
-		div.header{
-			background-color: rgba(0, 0, 0, 0.001);
-			width: 80%;
-			margin:20px;
-		}
-		div.header2{
-			background-color: rgba(0, 0, 0, 0.5);
-			width: 75%;
-			margin:20px;
-			margin-bottom:0px;
-		}
-		div.content{
-			background-color: rgba(0, 0, 0, 0.5);
-			display: flex;
-			flex-direction:column;
-			width: 25%;
-			margin: 20px;
-			min-width: 300px;
-			height: 300px;
-			justify-content: center;
-			align-items:center;
-		}
-		div.contentbox{
-		    display:flex;
-			flex-direction:row;
-			flex-wrap:wrap;
-			align-items: center;
-			justify-content: center;
-		}
-		img.melogo{
-			width: 200%;
-			max-width: 200px;
-			margin-top:20px;
-		}
-		img.logo{
-			width: 100%;
-			max-width: 100px;
-			margin-top:20px;
-		}
-	
-	</style>
+	<link rel="stylesheet" href="css/my_styles.css">
 	
 </head>
 	
@@ -92,12 +20,6 @@
 			<img src="MeLogo3.png" alt="Xinu" class="melogo">
 			<h1>Sarah Skinner</h1>
 			<h3>That's me. This is what I'm doing right now.</h2>
-			<!--these are links. You can set the destination to other sites or other parts of your page. If you want to 
-				go to a different part of the page, then you have to give that part an id such as "item1"-->
-			<!-- <a href="https://isitchristmas.com/">Is it Christmas?</a> -->
-			<!-- <a href="#item1">Menu</a> -->
-			<!-- <a href="#item2">Drinks</a> -->
-			<!-- <a href="#item3">Item 3</a> -->
 		</div>
 		<div class="header">
 			<hr>
@@ -127,36 +49,15 @@
 		</div>
 		<div class="header">
 			<hr>
-			<a href="#title" style="text-shadow:0px 0px black;color:white;">Back to top</a>
+			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
+			<a href="#title" class="backtotop">Back to top</a>
 		</div>
 	
 	</div>
 	<!--id is used to specify a single element. Only this div will have this id "tim"-->
-	<!--<div id="tim"></div>--><!--this div is empty on purpose. The javascript code is going to put something here-->
+	
 </body>
 
-<script><!--Javascript code: Code here acts after creating the page-->
-
-	//java code has a different comment notation
-	
-	//generate a random number in the range 0-150
-	var randomNumber = Math.floor(Math.random() * 151);
-	
-	//use random number and make sure it is in the range of the decimal id of the emojis
-	//currently picked the numbers for animals and smiley faces
-	if( randomNumber > 81 ){
-		randomNumber = randomNumber+128512-81;
-	}
-	else{
-		randomNumber = randomNumber+128000;
-	}
-		
-	//put the emoji id number into the format the html page will accept (&#000000)
-	var thisEmoji = "&#"+randomNumber.toString();
-	
-	//insert into div named tim
-	document.getElementById("tim").innerHTML = ( thisEmoji );
-	
-</script>
+<script src="js/insert_random_emoji.js"><!--Javascript code: Code here acts after creating the page--></script>
 
 </html>
