--- a/renew.html
+++ b/renew.html
@@ -19,19 +19,27 @@
 		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
 			<div id="jeff" class="titleemoji"></div>
 			<h1>Xinu Renew</h1>
-			<h3>Little free library books</h2>
+			<h3>Little Free Library Books</h2>
 		</div>
 		<div class="header">
 			<hr>
 		</div>
 		
-		<div class="contentbox">
-			<div id="item1" class="content"> <!--to modify the style, look at div.content in the style section-->
+		<!-- <div> -->
+			<div id="item1" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h2>Hi!</h2>
-				<p>You are seeing this page because you found one of my renewed books. <br> Please read and then share this book with someone else!</p>
+				<p>You are seeing this page because you found one of my renewed books.</p>
+				<p>This book has been donated to Little Free Library.</p>
+				<p>Please enjoy and take to a different Little Free Library than where you go it from.</p>
+				<p>Feel free to take it far and wide!</p>
 			</div>
-			<div id="item2" class="content">
+			<div id="item2" class="header2">
+				<a href="https://littlefreelibrary.org/ourmap/" target="_blank"><img src="free_little_library.jpg" alt="Free Little Library" class="logo"></a>
+				<h2>Where should I take the book?</h2>
+				<p>Search here for a Little Free Library nearby.</p>
+			</div>
+			<div id="item3" class="header2">
 				<a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a>
 				<h2>Like my stuff?</h2>
 				<p>Check out more of my stuff here.</p>
@@ -46,7 +54,7 @@
 				<!-- <h2>Instagram</h2> -->
 				<!-- <p>Look at pictures of my cat Rockstar.</p> -->
 			<!-- </div> -->
-		</div>
+		<!-- </div> -->
 		<div class="header">
 			<hr>
 			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
