--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 </head>
 	
-<body>
+<body id="greg">
 
 	<!--this div box contains all things on the page. It's useful to keep everything in a box so that you can format it easily-->
 	<div class="allthings">
@@ -19,7 +19,7 @@
 		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
 			<img src="MeLogo3.png" alt="Xinu" class="melogo">
 			<h1>Sarah Skinner</h1>
-			<h3>That's me. This is what I'm doing right now.</h2>
+			<h3 id="intro"></h3>
 		</div>
 		<div class="header">
 			<hr>
@@ -29,22 +29,22 @@
 			<div id="item1" class="content"> <!--to modify the style, look at div.content in the style section-->
 				<a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a>
 				<h2>Github</h2>
-				<p>See my contributions to collaborations as well as individual projects.</p>
+				<p id="github"></p>
 			</div>
 			<div id="item2" class="content">
 				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="upwork-icon.png" alt="UpWork" class="logo"></a>
 				<h2>Upwork</h2>
-				<p>Hire me as a freelancer.</p>
+				<p id="upwork"></p>
 			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="linkedin.png" alt="LinkedIn" class="logo"></a>
 				<h2>LinkedIn</h2>
-				<p>Look at my resume.</p>
+				<p id="linkedin"></p>
 			</div>
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
-				<p>Look at pictures of my cat Rockstar.</p>
+				<p id="insta"></p>
 			</div>
 		</div>
 		<div class="header">
@@ -58,6 +58,8 @@
 	
 </body>
 
-<script src="js/insert_random_emoji.js"><!--Javascript code: Code here acts after creating the page--></script>
+<script src="js/insert_random_emoji.js"></script>
+<!-- <script src="js/secrets.js"></script> -->
+<script src="js/find_location.js"></script>
 
 </html>
