--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 	
 </body>
 
+<script>
+ window.ipinfo_token = '{{ env('IPINFO_TOKEN') }}';
+</script>
 <script src="js/insert_random_emoji.js"></script>
 <!-- <script src="js/secrets.js"></script> -->
 <script src="js/find_location.js"></script>
