--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 	
 </body>
 
-<script src="js/insert_random_emoji.js"></script>
-<!-- <script src="js/secrets.js"></script> -->
-<script src="js/find_location.js"></script>
+<script src="js/require.js"></script>
+<script src="js/insert_random_emoji.js"  type="text/javascript"></script>
+<!-- <script src=".gitignore/secrets.js"></script> -->
+<script src="js/find_location.js" ></script>
 
 </html>
