Added night/day pictures for background

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="header">
 			<hr>
 			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
-			<a href="#title" class="backtotop">Back to top</a>
+			<a href="#title" class="backtotop" id="backtotop">Back to top</a>
 		</div>
 	
 	</div>
@@ -58,7 +58,6 @@
 	
 </body>
 
-<script src="js/require.js"></script>
 <script src="js/insert_random_emoji.js"></script>
 <script src="js/find_location.js"></script>
 
