Added moon and ominous desc

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
 				<h2>Github</h2>
 				<p id="github"></p>
 			</div>
-			<div id="item2" class="content">
-				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="upwork-icon.png" alt="UpWork" class="logo"></a>
-				<h2>Upwork</h2>
-				<p id="upwork"></p>
-			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="linkedin.png" alt="LinkedIn" class="logo"></a>
 				<h2>LinkedIn</h2>
 				<p id="linkedin"></p>
+			</div>
+			<div id="item2" class="content">
+				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="upwork-icon.png" alt="UpWork" class="logo"></a>
+				<h2>Upwork</h2>
+				<p>Hire me online as a freelancer.</p>
+				<p id="upwork"></p>
 			</div>
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
@@ -58,7 +59,8 @@
 	
 </body>
 
-<script src="js/insert_random_emoji.js"></script>
+<script src="js/lunar_phase.js"></script>
 <script src="js/find_location.js"></script>
+
 
 </html>
