--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 		<!--This begins the different boxes you can have. The first box has a different style than the rest-->
 		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
-			<img src="MeLogo3.png" alt="Xinu" class="melogo">
+			<img src="MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
 			<h3 id="intro"></h3>
 		</div>
@@ -30,6 +30,7 @@
 				<a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a>
 				<h2>Github</h2>
 				<p id="github"></p>
+				<p>See my contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="linkedin.png" alt="LinkedIn" class="logo"></a>
@@ -45,6 +46,7 @@
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
+				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
 			</div>
 		</div>
