updated xinucode site

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
 			<img src="MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
+			<h3>That's me. This is what I'm doing right now.</h3>
 			<h3 id="intro"></h3>
 		</div>
 		<div class="header">
@@ -63,6 +64,7 @@
 
 <script src="js/lunar_phase.js"></script>
 <script src="js/find_location.js"></script>
+<script src="js/insert_joke.js"></script>
 
 
 </html>
