finalized xinucode page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 				<p>Hire me online as a freelancer.</p>
 				<p id="upwork"></p>
 			</div>
+			<div id="item5" class="content">
+				<a href="xinucode.html"><img src="MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
+				<h2>xinu-code</h2>
+				<p>Want to learn how to code? Check out my project-based tutoring.</p>
+			</div>
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
