--- a/xinucode.html
+++ b/xinucode.html
@@ -52,7 +52,7 @@
 				<h3>xinu-code primary coding languages</h3>
 			</div>
 			<div id="item4" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
+				<acronym title="See my site!"><a href="https://sssm8d.github.io/"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
 				<h3>Who am I?</h3>
 				<p>My name is Sarah Skinner. You can see my personal page by clicking my logo. I have experience tutoring code to a wide range of age groups. It's never too early
 				nor too late.</p>
@@ -80,12 +80,12 @@
 			<div id="item7" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
 				<h3>Interested?</h3>
-				<p>Fill out this form to get in touch with me!</p>
-				<form action="xinucode.php" method="POST">
+				<p>Fill out this form to get in touch with me! You can ask about pricing or how to get started.</p>
+				<form action="https://formspree.io/f/meqnjbrj" method="POST">
 				<div class="allthings">
-					<input type="text" name="email" style="width:50%;" placeholder="Your Email">
-					<textarea rows="4" name="comment" maxlength=2000 placeholder="Your Message" style="width:50%;"></textarea>
-					<input type="submit" value="Submit" class="tm-bg-green tm-text-white d-block ml-auto tm-subscribe-btn">
+					<input type="email" name="_replyto" style="width:50%;" placeholder="Your Email">
+					<textarea rows="4" name="message" maxlength=2000 placeholder="Your Message" style="width:50%;"></textarea>
+					<input type="submit" value="Submit">
 				</div>
 				</form>
 				
