--- a/xinucode.html
+++ b/xinucode.html
@@ -82,9 +82,9 @@
 				<h3>Interested?</h3>
 				<p>Fill out this form to get in touch with me! You can ask about pricing or how to get started.</p>
 				<form action="https://formspree.io/f/meqnjbrj" method="POST">
-				<div class="allthings">
-					<input type="email" name="_replyto" style="width:50%;" placeholder="Your Email">
-					<textarea rows="4" name="message" maxlength=2000 placeholder="Your Message" style="width:50%;"></textarea>
+				<div class="formbox">
+					<input type="email" name="_replyto" class="forminput" placeholder="Your Email">
+					<textarea rows="4" name="message" maxlength=2000 placeholder="Your Message" class="forminput"></textarea>
 					<input type="submit" value="Submit">
 				</div>
 				</form>
@@ -94,7 +94,8 @@
 		<div class="header">
 			<hr>
 			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
-			<a href="#title" class="backtotop" style="color:black;">Back to top</a>
+			<a href="#title" class="backtotop" style="color:black;">Back to top</a><br>
+			<a href="https://sssm8d.github.io/" class="backtotop" style="color:black;">Back to my site</a>
 		</div>
 	
 	</div>
