--- a/xinucode.html
+++ b/xinucode.html
@@ -38,8 +38,7 @@
 			<div id="item2" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h3>What is xinu-code?</h3>
-				<p>Xinucode is a one-on-one flexible teaching program. Rather than the usual introductory course structure, Xinucode focuses on a single project (though I will make sure to go through the all the basics throughout). 
-				Xinucode will certainly not make you a professional, but it will teach you the basics of coding while completing a deliverable (Github) that you can put on your resume. We meet weekly. There's no homework. No grading.</p>
+				<p>Xinucode will certainly not make you a professional, but I will teach you the basics of coding while you complete a project (Github) that you can put on your resume. We meet weekly. There's no homework. No grading.</p>
 			</div>
 			<div id="item1"  class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<div class="logobar">
