notate and clean up project

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/my_styles.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
-	<link rel="icon" href="MeLogo3-purple-circle2.png">
+	<link rel="icon" href="logos/MeLogo3-purple-circle2.png">
 	<link rel="stylesheet" href="css/my_styles.css">
 	
 </head>
 	
 <body id="greg">
 
-	<!--this div box contains all things on the page. It's useful to keep everything in a box so that you can format it easily-->
 	<div class="allthings">
 	
-		<!--This begins the different boxes you can have. The first box has a different style than the rest-->
-		<div id="title" class="header2"><!--to modify the style, look at div.header in the style section-->
-			<img src="MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
+		<div id="title" class="header2">
+			<img src="logos/MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
 			<h3>That's me. This is what I'm doing right now.</h3>
 			<h3 id="intro"></h3>
@@ -27,30 +25,30 @@
 		</div>
 		
 		<div class="contentbox">
-			<div id="item1" class="content"> <!--to modify the style, look at div.content in the style section-->
-				<a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a>
+			<div id="item1" class="content"> 
+				<a href="https://github.com/sssm8d" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
 				<h2>Github</h2>
 				<p id="github"></p>
 				<p>See my contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="linkedin.png" alt="LinkedIn" class="logo"></a>
+				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
 				<h2>LinkedIn</h2>
-				<p id="linkedin"></p>
+				<p id="linkedin">Look at my resume.</p>
 			</div>
 			<div id="item2" class="content">
-				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="upwork-icon.png" alt="UpWork" class="logo"></a>
+				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
 				<h2>Upwork</h2>
 				<p>Hire me online as a freelancer.</p>
 				<p id="upwork"></p>
 			</div>
 			<div id="item5" class="content">
-				<a href="xinucode.html"><img src="MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
+				<a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
 				<h2>xinu-code</h2>
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
-				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a>
+				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
@@ -58,12 +56,11 @@
 		</div>
 		<div class="header">
 			<hr>
-			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
+			<div id="tim" class="randomemoji"></div>
 			<a href="#title" class="backtotop" id="backtotop">Back to top</a>
 		</div>
 	
 	</div>
-	<!--id is used to specify a single element. Only this div will have this id "tim"-->
 	
 </body>
 
