fix bug and add new feature to xinucode

--- a/xinucode.html
+++ b/xinucode.html
@@ -51,7 +51,7 @@
 				<h3>xinu-code primary coding languages</h3>
 			</div>
 			<div id="item4" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<acronym title="See my site!"><a href="https://sssm8d.github.io/"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
+				<acronym title="See my site!"><a href="https://sssm8d.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
 				<h3>Who am I?</h3>
 				<p>My name is Sarah Skinner. You can see my personal page by clicking my logo. I have experience tutoring code to a wide range of age groups. It's never too early
 				nor too late.</p>
@@ -75,6 +75,13 @@
 				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
 				<h3>How much?</h3>
 				<p>Prices are subject to change as I fine tune this program. You may get my current pricing by filling out the form below.</p>
+			</div>
+			<div id="item8" class="header2"> <!--to modify the style, look at div.content in the style section-->
+				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
+				<h3>Example Project</h3>
+				<p>Build a Website</p>
+				<iframe src="https://github.com/sssm8d/sssm8d.github.io" class="window"></iframe>
+				<!-- <iframe src="https://www.google.com/" class="window"></iframe> -->
 			</div>
 			<div id="item7" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
