--- a/xinucode.html
+++ b/xinucode.html
@@ -61,7 +61,7 @@
 				<h3>How long is this program?</h3>
 				<p>The length of the program is dependent on the project we choose. Depending on you experience, projects can range from a few weeks to a few months.</p>
 			</div>
-			<div id="item3"  class="header2"> <!--to modify the style, look at div.content in the style section-->
+			<div id="item3"  class="header2"> 
 				<div class="logobar">
 					<acronym title="Github"><img src="logos/github.png" alt="Github" class="logo"></acronym>
 					<acronym title="Jupyter"><img src="logos/jupyter.png" alt="Jupyter" class="logo"></acronym>
@@ -71,20 +71,37 @@
 				</div>
 				<h3>xinu-code featured software</h3>
 			</div>
-			<div id="item6" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
+			<div id="item6" class="header2"> 
 				<h3>How much?</h3>
 				<p>Prices are subject to change as I fine tune this program. You may get my current pricing by filling out the form below.</p>
 			</div>
-			<div id="item8" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
-				<h3>Example Project</h3>
-				<p>Build a Website</p>
-				<iframe src="https://github.com/sssm8d/sssm8d.github.io" class="window"></iframe>
-				<!-- <iframe src="https://www.google.com/" class="window"></iframe> -->
+			<div id="item8" class="samplebox"> 
+				<h3>Sample Projects:</h3>
+				<div class="samplescrollbox">
+				<div class="sample">
+					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
+					<h3>sssm8d.github.io</h3>
+					<p>Build a website and learn html, css, and javascript basics.</p>
+				</div>
+				<div class="sample">
+					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
+					<h3>sssm8d.github.io</h3>
+					<p>Build a website and learn html, css, and javascript skills.</p>
+				</div>
+				<div class="sample">
+					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
+					<h3>sssm8d.github.io</h3>
+					<p>Build a website and learn html, css, and javascript skills.</p>
+				</div>
+				<div class="sample">
+					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
+					<h3>sssm8d.github.io</h3>
+					<p>Build a website and learn html, css, and javascript skills.</p>
+				</div>
+				</div>
 			</div>
-			<div id="item7" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
+			
+			<div id="item7" class="header2">
 				<h3>Interested?</h3>
 				<p>Fill out this form to get in touch with me! You can ask about pricing or how to get started.</p>
 				<form action="https://formspree.io/f/meqnjbrj" method="POST">
