made xinucode page more friendly

--- a/solid_state_final_report.html
+++ b/solid_state_final_report.html
@@ -48,6 +48,7 @@
 			<hr>
 			<div id="tim" class="randomemoji"></div>
 			<a href="#title" class="backtotop" id="backtotop">Back to top</a>
+			<a href="https://sssm8d.github.io/" class="backtotop">Back to my site</a>
 		</div>
 	
 	</div>
