--- a/xinucode.html
+++ b/xinucode.html
@@ -83,21 +83,21 @@
 					<h3>sssm8d.github.io</h3>
 					<p>Build a website and learn html, css, and javascript basics.</p>
 				</div>
-				<div class="sample">
-					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
-					<h3>sssm8d.github.io</h3>
-					<p>Build a website and learn html, css, and javascript skills.</p>
-				</div>
-				<div class="sample">
-					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
-					<h3>sssm8d.github.io</h3>
-					<p>Build a website and learn html, css, and javascript skills.</p>
-				</div>
-				<div class="sample">
-					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
-					<h3>sssm8d.github.io</h3>
-					<p>Build a website and learn html, css, and javascript skills.</p>
-				</div>
+				<!-- <div class="sample"> -->
+					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
+				<!-- </div> -->
+				<!-- <div class="sample"> -->
+					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
+				<!-- </div> -->
+				<!-- <div class="sample"> -->
+					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
+				<!-- </div> -->
 				</div>
 			</div>
 			
