added another sample project to xinucode

--- a/xinucode.html
+++ b/xinucode.html
@@ -59,7 +59,7 @@
 			<div id="item5" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
 				<h3>How long is this program?</h3>
-				<p>The length of the program is dependent on the project we choose. Depending on you experience, projects can range from a few weeks to a few months.</p>
+				<p>The length of the program is dependent on the project we choose. Depending on your experience, projects can range from a few weeks to a few months.</p>
 			</div>
 			<div id="item3"  class="header2"> 
 				<div class="logobar">
@@ -78,11 +78,17 @@
 			<div id="item8" class="samplebox"> 
 				<h3>Sample Projects:</h3>
 				<div class="samplescrollbox">
-				<div class="sample">
-					<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a>
-					<h3>sssm8d.github.io</h3>
-					<p>Build a website and learn html, css, and javascript basics.</p>
-				</div>
+					<div class="sample">
+						<a href="https://github.com/sssm8d/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
+						<a href="https://github.com/sssm8d/xmgrace_parser" target="_blank"><h3>Xmgrace Parser</h3></a>
+						<p>Existing python library upgraded to python3.</p>
+					</div>
+					<div class="sample">
+						<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/MeLogo3-white-outline.png" alt="webpage" class="logo"></a>
+						<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><h3>sssm8d.github.io</h3></a>
+						<p>A website that uses html, css, and javascript.</p>
+					</div>
+
 				<!-- <div class="sample"> -->
 					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
 					<!-- <h3>sssm8d.github.io</h3> -->
