--- a/xinucode.html
+++ b/xinucode.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/my_styles.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
-	<link rel="icon" href="MeLogo3-purple-circle2.png">
+	<link rel="icon" href="logos/MeLogo3-purple-circle2.png">
 	
 </head>
 	
