--- a/renew.html
+++ b/renew.html
@@ -26,7 +26,7 @@
 		
 		<!-- <div> -->
 			<div id="item1" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
+				<!-- <a href="https://github.com/xinucode" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h2>Hi!</h2>
 				<p>You are seeing this page because you found one of my renewed books.</p>
 				<p>This book has been donated to Little Free Library.</p>
@@ -44,7 +44,7 @@
 				<!-- <iframe src="https://www.google.com/maps/d/u/3/embed?mid=1jGNWY3UwmSNN8j6oAzz-ktz6-MhUxGUB&ehbc=2E312F" width="640" height="480"></iframe> -->
 			<!-- </div> -->
 			<div id="item3" class="header2">
-				<a href="https://sssm8d.github.io/" target="_blank"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a>
+				<a href="https://xinucode.github.io/" target="_blank"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a>
 				<h2>Like my stuff?</h2>
 				<p>Check out more of my stuff here.</p>
 			</div>
@@ -54,7 +54,7 @@
 				<!-- <p>Look at my resume.</p> -->
 			<!-- </div> -->
 			<!-- <div id="item4" class="content"> -->
-				<!-- <a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a> -->
+				<!-- <a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><img src="insta.png" alt="Instagram" class="logo"></a> -->
 				<!-- <h2>Instagram</h2> -->
 				<!-- <p>Look at pictures of my cat Rockstar.</p> -->
 			<!-- </div> -->
