--- a/xinucode.html
+++ b/xinucode.html
@@ -30,13 +30,13 @@
 		
 		<div class="contentbox">
 			<div id="item0" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
+				<!-- <a href="https://github.com/xinucode" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h3>Have some coding projects, but don't know how to code?</h3>
 				<h3>Unfamiliar with how to develop a project?</h3>
 				<h3>Check out xinu-code!<h3>
 			</div>
 			<div id="item2" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <a href="https://github.com/sssm8d" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
+				<!-- <a href="https://github.com/xinucode" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h3>What is xinu-code?</h3>
 				<p>Xinucode will certainly not make you a professional, but I will teach you the basics of coding while you complete a project (Github) that you can put on your resume. We meet weekly. There's no homework. No grading.</p>
 			</div>
@@ -51,13 +51,13 @@
 				<h3>xinu-code primary coding languages</h3>
 			</div>
 			<div id="item4" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<acronym title="See my site!"><a href="https://sssm8d.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
+				<acronym title="See my site!"><a href="https://xinucode.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
 				<h3>Who am I?</h3>
 				<p>My name is Sarah Skinner. You can see my personal page by clicking my logo. I have experience tutoring code to a wide range of age groups. It's never too early
 				nor too late.</p>
 			</div>
 			<div id="item5" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<!-- <acronym title="See my site!"><a href="https://sssm8d.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
+				<!-- <acronym title="See my site!"><a href="https://xinucode.github.io/" target="_blank"><img src="MeLogo3.png" alt="Xinu" class="logo"></a></acronym> -->
 				<h3>How long is this program?</h3>
 				<p>The length of the program is dependent on the project we choose. Depending on your experience, projects can range from a few weeks to a few months.</p>
 			</div>
@@ -79,29 +79,29 @@
 				<h3>Sample Projects:</h3>
 				<div class="samplescrollbox">
 					<div class="sample">
-						<a href="https://github.com/sssm8d/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
-						<a href="https://github.com/sssm8d/xmgrace_parser" target="_blank"><h3>Xmgrace Parser</h3></a>
+						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
+						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><h3>Xmgrace Parser</h3></a>
 						<p>Existing python library upgraded to python3.</p>
 					</div>
 					<div class="sample">
-						<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/MeLogo3-white-outline.png" alt="webpage" class="logo"></a>
-						<a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><h3>sssm8d.github.io</h3></a>
+						<a href="https://github.com/xinucode/xinucode.github.io" target="_blank"><img src="logos/MeLogo3-white-outline.png" alt="webpage" class="logo"></a>
+						<a href="https://github.com/xinucode/xinucode.github.io" target="_blank"><h3>xinucode.github.io</h3></a>
 						<p>A website that uses html, css, and javascript.</p>
 					</div>
 
 				<!-- <div class="sample"> -->
-					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
-					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <a href="https://github.com/xinucode/xinucode.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>xinucode.github.io</h3> -->
 					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
 				<!-- </div> -->
 				<!-- <div class="sample"> -->
-					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
-					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <a href="https://github.com/xinucode/xinucode.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>xinucode.github.io</h3> -->
 					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
 				<!-- </div> -->
 				<!-- <div class="sample"> -->
-					<!-- <a href="https://github.com/sssm8d/sssm8d.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
-					<!-- <h3>sssm8d.github.io</h3> -->
+					<!-- <a href="https://github.com/xinucode/xinucode.github.io" target="_blank"><img src="logos/github2.png" alt="webpage" class="logo"></a> -->
+					<!-- <h3>xinucode.github.io</h3> -->
 					<!-- <p>Build a website and learn html, css, and javascript skills.</p> -->
 				<!-- </div> -->
 				</div>
@@ -124,7 +124,7 @@
 			<hr>
 			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
 			<a href="#title" class="backtotop" style="color:black;">Back to top</a><br>
-			<a href="https://sssm8d.github.io/" class="backtotop" style="color:black;">Back to my site</a>
+			<a href="https://xinucode.github.io/" class="backtotop" style="color:black;">Back to my site</a>
 		</div>
 	
 	</div>
