--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<div class="contentbox">
 			<div id="item1" class="content"> 
-				<a href="https://github.com/sssm8d" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
+				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
 				<h2>Github</h2>
 				<p id="github"></p>
 				<p>See my contributions to collaborations as well as individual projects.</p>
@@ -48,7 +48,7 @@
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
-				<a href="https://raw.githubusercontent.com/sssm8d/sssm8d.github.io/main/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
+				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
 				<h2>Instagram</h2>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
