updated xinucode page with new project; added some more consistent links to index

--- a/xinucode.html
+++ b/xinucode.html
@@ -38,7 +38,7 @@
 			<div id="item2" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<!-- <a href="https://github.com/xinucode" target="_blank"><img src="github.png" alt="Github" class="logo"></a> -->
 				<h3>What is xinu-code?</h3>
-				<p>Xinucode will certainly not make you a professional, but I will teach you the basics of coding while you complete a project (Github) that you can put on your resume. We meet weekly. There's no homework. No grading.</p>
+				<p>Xinucode won't make you a professional, but I will teach you the basics of coding while you complete a project (Github) that you can put on your resume. We meet weekly. There's no homework. No grading.</p>
 			</div>
 			<div id="item1"  class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<div class="logobar">
@@ -78,6 +78,11 @@
 			<div id="item8" class="samplebox"> 
 				<h3>Sample Projects:</h3>
 				<div class="samplescrollbox">
+					<div class="sample">
+						<a href="https://github.com/xinucode/spacejock_conversions" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
+						<a href="https://github.com/xinucode/spacejock_conversions" target="_blank"><h3>SpaceJock Conversions</h3></a>
+						<p>Conversion software that uses python to converts the output of a free writing software into several unique formats including a Shunn formatted document via Rich Text Format, bookstyle laTeX PDF, and HTML/PHP E-Reader.</p>
+					</div>
 					<div class="sample">
 						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
 						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><h3>Xmgrace Parser</h3></a>
