--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
 		<div class="contentbox">
 			<div id="item1" class="content"> 
 				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
-				<h2>Github</h2>
+				<a href="https://github.com/xinucode" target="_blank"><h2>Github</h2></a>
 				<p id="github"></p>
 				<p>See my contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
-				<h2>LinkedIn</h2>
+				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
 				<p id="linkedin">Look at my resume.</p>
 			</div>
 			<div id="item2" class="content">
 				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
-				<h2>Upwork</h2>
+				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><h2>Upwork</h2></a>
 				<p>Hire me online as a freelancer.</p>
 				<p id="upwork"></p>
 			</div>
 			<div id="item5" class="content">
 				<a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
-				<h2>xinu-code</h2>
+				<a href="xinucode.html"><h2>xinu-code</h2></a>
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
-				<h2>Instagram</h2>
+				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><h2>Instagram</h2></a>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
 			</div>
