--- a/xinucode.html
+++ b/xinucode.html
@@ -79,12 +79,12 @@
 				<h3>Sample Projects:</h3>
 				<div class="samplescrollbox">
 					<div class="sample">
-						<a href="https://github.com/xinucode/spacejock_conversions" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
+						<a href="https://github.com/xinucode/spacejock_conversions" target="_blank"><img src="logos/snipyWriter5.png" alt="ywriter5_logo" class="logo"></a>
 						<a href="https://github.com/xinucode/spacejock_conversions" target="_blank"><h3>SpaceJock Conversions</h3></a>
 						<p>Conversion software that uses python to converts the output of a free writing software into several unique formats including a Shunn formatted document via Rich Text Format, bookstyle laTeX PDF, and HTML/PHP E-Reader.</p>
 					</div>
 					<div class="sample">
-						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="webpage" class="logo"></a>
+						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><img src="logos/grace.jpg" alt="grace_logo" class="logo"></a>
 						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><h3>Xmgrace Parser</h3></a>
 						<p>Existing python library upgraded to python3.</p>
 					</div>
