fixed insta link and fixed asthetics

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
-				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
-				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/instagram.JPG" target="_blank"><h2>Instagram</h2></a>
+				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/logos/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
+				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/logos/instagram.JPG" target="_blank"><h2>Instagram</h2></a>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
 			</div>
