added more detail

--- a/xinucode.html
+++ b/xinucode.html
@@ -48,7 +48,8 @@
 					<acronym title="HTML5"><img src="logos/html5.png" alt="HTML5" class="logo"></acronym>
 					<acronym title="Bash/Batch Scripting"><img src="logos/script.png" alt="Bash/Batch Scripting" class="logo"></acronym>
 				</div>
-				<h3>xinu-code primary coding languages</h3>
+				<h3>xinu-code primary coding languages:</h3>
+				<p>Python, C++, Fortran, HTML5, bash/batch scripting</p>
 			</div>
 			<div id="item4" class="header2"> <!--to modify the style, look at div.content in the style section-->
 				<acronym title="See my site!"><a href="https://xinucode.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
