added more detail

--- a/xinucode.html
+++ b/xinucode.html
@@ -70,7 +70,8 @@
 					<acronym title="Cygwin"><img src="logos/cygwin.png" alt="Cygwin" class="logo"></acronym>
 					<acronym title="Putty"><img src="logos/putty.png" alt="Putty" class="logo"></acronym>
 				</div>
-				<h3>xinu-code featured software</h3>
+				<h3>xinu-code featured software:</h3>
+				<p>Github, Jupyter, Notepad++, Cygwin, Putty</p>
 			</div>
 			<div id="item6" class="header2"> 
 				<h3>How much?</h3>
