added more info, spiced it up maybe?

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div id="title" class="header2">
 			<img src="logos/MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
+			<h4>(she/her)</h4>
 			<h3>That's me. This is what I'm doing right now.</h3>
 			<h3 id="intro"></h3>
 		</div>
@@ -25,6 +26,13 @@
 		</div>
 		
 		<div class="contentbox">
+			<div id="item6" class="content"> 
+				<a href="https://www.cmu.edu/physics/people/graduate-students.html" target="_blank"><img src="logos/cmu-mascot-3-color-on-w.png" alt="CMU" class="logo"></a>
+				<a href="https://www.cmu.edu/physics/people/graduate-students.html" target="_blank"><h2>Carnegie Mellon University</h2></a>
+				<p id="cmu"></p>
+				<p>I'm on a Physics PhD track due to graduate in 2024 (hopefully).</p>
+				<p>I'm currently studying Lattice QCD for my thesis under the mentorship of Dr. Colin Morningstar.</p>
+			</div>
 			<div id="item1" class="content"> 
 				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
 				<a href="https://github.com/xinucode" target="_blank"><h2>Github</h2></a>
@@ -34,7 +42,7 @@
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
-				<p id="linkedin">Look at my resume.</p>
+				<p id="linkedin">Check out my resume.</p>
 			</div>
 			<div id="item2" class="content">
 				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
