--- a/xinucode.html
+++ b/xinucode.html
@@ -9,7 +9,7 @@
 	
 </head>
 	
-<body class=code>
+<body id="greg">
 
 	<!--this div box contains all things on the page. It's useful to keep everything in a box so that you can format it easily-->
 	<div class="allthings">
@@ -129,8 +129,8 @@
 		</div>
 		<div class="header">
 			<hr>
-			<div id="tim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
-			<a href="#title" class="backtotop" style="color:black;">Back to top</a><br>
+			<div id="jim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
+			<a href="#title" class="backtotop" id="backtotop" style="color:black;">Back to top</a><br>
 			<a href="https://xinucode.github.io/" class="backtotop" style="color:black;">Back to my site</a>
 		</div>
 	
@@ -139,6 +139,8 @@
 	
 </body>
 
+<script src="js/lunar_phase.js"></script>
+<script src="js/find_location.js"></script>
 <script src="js/insert_random_emoji.js"></script>
 <script src="js/insert_joke.js"></script>
 
